[gd_scene load_steps=3 format=3 uid="uid://cbvtkgpxo5qku"]

[ext_resource type="Script" path="res://objs/warehouse/warehouse.gd" id="1_3a48e"]
[ext_resource type="PackedScene" uid="uid://dpwr2gpbjvfx5" path="res://assets/3d/warehouse/warehouse.blend" id="2_0i80k"]

[node name="warehouse" type="Node3D"]
script = ExtResource("1_3a48e")

[node name="warehouse" parent="." instance=ExtResource("2_0i80k")]

[node name="box_location" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 6)

[node name="spawn" type="Node3D" parent="box_location"]

[node name="box_timer" type="Timer" parent="."]
autostart = true

[node name="drone_spawn_location" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61507, 0)

[connection signal="timeout" from="box_timer" to="." method="_on_box_timer_timeout"]
